# lensflare

./: .gitignore  .gitmodules  CMakeLists.txt  cams.sh  package.xml  persist.json  trig.sh
.history/harvester/harvester/: camera_node2_20240508220229.py  camera_node2_20240508220419.py  camera_node2_20240508220422.py  camera_node2_20240508220427.py  camera_node2_20240508220519.py  camera_node2_20240508220637.py  camera_node2_20240508220640.py  camera_node2_20240508220644.py  camera_node2_20240508220650.py  camera_node2_20240508220703.py  camera_node2_20240508220708.py  camera_node2_20240508220712.py  camera_node2_20240508220722.py  camera_node2_20240508220738.py  camera_node2_20240508220750.py  camera_node2_20240508220754.py  camera_node2_20240508220755.py  camera_node2_20240508220759.py  camera_node2_20240508220803.py  camera_node2_20240508220807.py  camera_node2_20240508220811.py  camera_node2_20240508220812.py  camera_node2_20240508220814.py  camera_node2_20240508220817.py  camera_node2_20240508220821.py  camera_node2_20240508220841.py  camera_node2_20240508220845.py  camera_node2_20240508220851.py  camera_node2_20240508220855.py  camera_node2_20240508220858.py  camera_node2_20240508220946.py  camera_node2_20240508220947.py  camera_node2_20240508220949.py  camera_node2_20240508220955.py  camera_node2_20240508221000.py  camera_node2_20240508221004.py  camera_node2_20240508221006.py  camera_node2_20240508221011.py  camera_node2_20240508221013.py  camera_node2_20240508221024.py  (+43 more)
configs/: 1.txt  10.txt  11a.txt  11b.txt  12.txt  13.txt  3.txt  4.txt  7c.txt  7e.txt  9a.txt
genicam/: CMakeLists.txt  package.xml
genicam/configs/: 1.txt  10.txt  11a.txt  4.txt  9c.txt
genicam/include/genicam/: CameraInfo.hpp  CameraManager.hpp  CameraNode.hpp  CameraSets.hpp
genicam/launch/: cameras_launch.py
genicam/msg/: CameraDevice.msg  TriggerCapture.msg
genicam/src/: ArenaCam.cpp  CameraInfo.cpp  CameraManager.cpp  CameraNode.cpp
genicam/srv/: TriggerCamera.srv
harvester/: package.xml  setup.cfg  setup.py
harvester/configs/: 1.txt  10.txt  11a.txt  11b.txt  12.txt  3.txt  4.txt  7b.txt
harvester/harvester/: camera_all.py  camera_array.py  camera_buffer_node.py  camera_info.py  camera_node.py  camera_node2.py  camera_node_copy.py  camera_node_file.py  camera_node_old.py  create_config_files.py  flash_node.py  harvest.py  image_saver.py  lights_off.py  timer_node.py  timer_node2.py  trigger_node.py
harvester/launch/: camera_launch.py  oxbo_launch.py
harvester_interfaces/: CMakeLists.txt  package.xml
harvester_interfaces/msg/: CameraDevice.msg  CameraDeviceArray.msg
harvester_interfaces/srv/: CreateCamera.srv  TriggerFlash.srv
include/: system.hpp
include/genicam/: CameraInfo.hpp  CameraManager.hpp  CameraNode.hpp
launch/: cameras.launch.py
src/: CameraManager.cpp  CameraNode.cpp  main.cpp
yolo8_inference/: package.xml  setup.cfg  setup.py
yolo8_inference/yolo8_inference/: yolo8_inference.py  yolo8_inference2.py  yolo8_inference_old.py
